Demo_code_Version1_Portfolio

--- a/Assignment_portfolio.html
+++ b/Assignment_portfolio.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+
 </head>
 <body>
    <center >
-       <img style="width: 95px" src="./Assets/Images/Avatar.png" alt="DolnaDram">
+       <img style="width: 95px" src="./Asset/Images/Avatar.png" alt="DolnaDram">
    </center> 
    <h5 align="center">Hello, What a good day today!</h5> 
    <p align="center">   Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
